--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -574,7 +574,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 90
         },
         "id": "ad6f4d82-80d6-4877-b60f-b6c18f6d9567",
         "outputId": "98078a95-9300-4c0d-9fea-63e1a175cf24"
@@ -629,7 +629,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 90
         },
         "id": "c55a8d66-8a28-469f-bb2e-f6853da70b75",
         "outputId": "16774c24-ef66-490b-ebb7-f954b98698ce"
@@ -1437,7 +1437,7 @@
         "id": "75b792aa-4329-4be7-855f-031538780d2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 868
+          "height": 888
         },
         "outputId": "638ebe3a-6095-474a-d75e-7b9e1dd17e7c"
       },
@@ -3695,27 +3695,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 24,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7ac1fb4-685f-42a3-8b5f-a9004d49b42c"
+        "outputId": "6237777a-60bc-486d-e60b-7dbdf0bcad5a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-23-7b592f53ca83>:22: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "<ipython-input-24-7eaa236a63f7>:22: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
             "  string_p = i.find('dt', text='RRP').find_next_sibling().text\n",
-            "<ipython-input-23-7b592f53ca83>:23: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "<ipython-input-24-7eaa236a63f7>:23: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
             "  row.append(float(re.search(r'(\\u20AC)(\\d+.\\d+)', i.find('dt', text=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[1]))\n",
-            "<ipython-input-23-7b592f53ca83>:27: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "<ipython-input-24-7eaa236a63f7>:27: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
             "  string_pieces = i.find('dt', text='Pieces').find_next_sibling().text\n",
-            "<ipython-input-23-7b592f53ca83>:42: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "<ipython-input-24-7eaa236a63f7>:42: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
             "  data = pd.concat([data, collectLegoSets(next_page)], axis=0).reset_index(drop=True)\n"
           ]
         }
@@ -3770,7 +3770,7 @@
         "lego2019 = collectLegoSets('https://brickset.com/sets/year-2019')\n",
         "lego2019\n",
         "\n",
-        "lego2019.to_csv('lego_sets_2019.csv', index=False)"
+        "lego2019.to_csv('lego2019.csv', index=False)"
       ]
     }
   ],
