--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -3695,82 +3695,81 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 26,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
-        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6237777a-60bc-486d-e60b-7dbdf0bcad5a"
+        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-24-7eaa236a63f7>:22: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
-            "  string_p = i.find('dt', text='RRP').find_next_sibling().text\n",
-            "<ipython-input-24-7eaa236a63f7>:23: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
-            "  row.append(float(re.search(r'(\\u20AC)(\\d+.\\d+)', i.find('dt', text=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[1]))\n",
-            "<ipython-input-24-7eaa236a63f7>:27: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
-            "  string_pieces = i.find('dt', text='Pieces').find_next_sibling().text\n",
-            "<ipython-input-24-7eaa236a63f7>:42: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-            "  data = pd.concat([data, collectLegoSets(next_page)], axis=0).reset_index(drop=True)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
         "\n",
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
         "import pandas as pd\n",
-        "import re\n",
         "import numpy as np\n",
         "\n",
-        "def collectLegoSets(url):\n",
-        "    site = requests.get(url)\n",
-        "    soup = BeautifulSoup(site.text)\n",
+        "def collectLegoSets(year):\n",
+        "    base_url = f\"https://brickset.com/sets/year-2019\"\n",
+        "    sets_data = []\n",
+        "    page = 1\n",
         "\n",
-        "    articles = [i for i in soup.find_all('article')]\n",
-        "    data = []\n",
-        "    for i in articles:\n",
-        "        row = []\n",
-        "        try:\n",
-        "            row.append(i.h1.text)\n",
-        "        except:\n",
-        "            row.append('')\n",
-        "        try:\n",
-        "            string_p = i.find('dt', text='RRP').find_next_sibling().text\n",
-        "            row.append(float(re.search(r'(\\u20AC)(\\d+.\\d+)', i.find('dt', text=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[1]))\n",
-        "        except:\n",
-        "            row.append(np.nan)\n",
-        "        try:\n",
-        "            string_pieces = i.find('dt', text='Pieces').find_next_sibling().text\n",
-        "            row.append(int(string_pieces))\n",
-        "        except:\n",
-        "            row.append(np.nan)\n",
-        "        try:\n",
-        "            minifigs_num = [j for j in i.find_all('a') if '/minifigs/' in j['href']][0].text\n",
-        "            row.append(minifigs_num)\n",
-        "        except:\n",
-        "            row.append(np.nan)\n",
-        "        data.append(row)\n",
-        "    data = pd.DataFrame(data, columns=['Set', 'Price_Euro', 'Pieces','Minifigs'])\n",
+        "    while True:\n",
+        "        url = f\"{base_url}/page-{page}\"\n",
+        "        response = requests.get(url)\n",
+        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "\n",
+        "        sets = soup.find_all('article', class_='set')\n",
+        "\n",
+        "        if not sets:\n",
+        "            break\n",
+        "\n",
+        "        for set in sets:\n",
+        "            name = set.find('h1').text.strip()\n",
+        "\n",
+        "            price = set.find('dt', string='RRP')\n",
+        "            price_euro = np.nan\n",
+        "            if price:\n",
+        "                price_text = price.find_next('dd').text.strip()\n",
+        "                if '€' in price_text:\n",
+        "\n",
+        "                    price_euro_str = price_text.split('|')[0].split('€')[1].replace(',', '.')\n",
+        "\n",
+        "                    try:\n",
+        "                        price_euro = float(price_euro_str)\n",
+        "                    except ValueError:\n",
+        "                        price_euro = np.nan\n",
+        "\n",
+        "            pieces = set.find('dt', string='Pieces')\n",
+        "            pieces_count = np.nan\n",
+        "            if pieces:\n",
+        "                pieces_text = pieces.find_next('dd').text.strip()\n",
+        "                if pieces_text.isdigit():\n",
+        "                    pieces_count = int(pieces_text)\n",
+        "\n",
+        "            minifigs = set.find('dt', string='Minifigs')\n",
+        "            minifigs_count = np.nan\n",
+        "            if minifigs:\n",
+        "                minifigs_text = minifigs.find_next('dd').text.strip()\n",
+        "                if minifigs_text.isdigit():\n",
+        "                    minifigs_count = int(minifigs_text)\n",
+        "\n",
+        "            sets_data.append({\n",
+        "                'Set': name,\n",
+        "                'Price_Euro': price_euro,\n",
+        "                'Pieces': pieces_count,\n",
+        "                'Minifigs': minifigs_count\n",
+        "            })\n",
+        "\n",
+        "        page += 1\n",
+        "\n",
+        "    return pd.DataFrame(sets_data)\n",
+        "\n",
+        "dataframe_2019 = collectLegoSets(2019)\n",
         "\n",
         "\n",
-        "    try:\n",
-        "        next_page = soup.find('li', class_='next').a['href']\n",
-        "        data = pd.concat([data, collectLegoSets(next_page)], axis=0).reset_index(drop=True)\n",
-        "        return data\n",
-        "    except:\n",
-        "        return data\n",
-        "\n",
-        "lego2019 = collectLegoSets('https://brickset.com/sets/year-2019')\n",
-        "lego2019\n",
-        "\n",
-        "lego2019.to_csv('lego2019.csv', index=False)"
+        "dataframe_2019.to_csv('lego2019.csv', index=False)\n",
+        "\n"
       ]
     }
   ],
