--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "459a31fc-f611-426a-92bc-ca3e3bb1b11d",
       "metadata": {
         "id": "459a31fc-f611-426a-92bc-ca3e3bb1b11d"
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "5900e353-a220-4237-9185-2abd3e67962e",
       "metadata": {
         "id": "5900e353-a220-4237-9185-2abd3e67962e"
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "d4020d6f-c76f-4e41-9818-aa85e40ee9fa",
       "metadata": {
         "colab": {
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "a5bcc419-f07c-4e69-ba50-116c06a51165",
       "metadata": {
         "id": "a5bcc419-f07c-4e69-ba50-116c06a51165",
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "3b6b53df-69d8-460e-98d8-c02b8ea8cb0b",
       "metadata": {
         "colab": {
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "8f0ad307-bc33-4d06-80aa-eb2d4a7ead46",
       "metadata": {
         "id": "8f0ad307-bc33-4d06-80aa-eb2d4a7ead46"
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "c1be9b47-3a35-4ca7-8231-507239799c34",
       "metadata": {
         "colab": {
@@ -333,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "ebd35e1b-f340-4eba-adde-bd0026823695",
       "metadata": {
         "colab": {
@@ -380,7 +380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "e123ee9a-0388-41b0-a524-188cceaef5fc",
       "metadata": {
         "colab": {
@@ -425,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "42540a00-e9e6-4bb2-b682-57c787d32575",
       "metadata": {
         "colab": {
@@ -518,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "1c7e14b2-6a58-4d2f-8b94-5f3352cdbe1b",
       "metadata": {
         "colab": {
@@ -569,12 +569,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "ad6f4d82-80d6-4877-b60f-b6c18f6d9567",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 70
         },
         "id": "ad6f4d82-80d6-4877-b60f-b6c18f6d9567",
         "outputId": "98078a95-9300-4c0d-9fea-63e1a175cf24"
@@ -624,12 +624,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "c55a8d66-8a28-469f-bb2e-f6853da70b75",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 70
         },
         "id": "c55a8d66-8a28-469f-bb2e-f6853da70b75",
         "outputId": "16774c24-ef66-490b-ebb7-f954b98698ce"
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "e9585352-4ce1-403e-ae60-b410e159d515",
       "metadata": {
         "colab": {
@@ -729,7 +729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "01f83bec-219f-448f-b6aa-b9bbcbee592e",
       "metadata": {
         "colab": {
@@ -1384,7 +1384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "e5ec1bf8-6d26-417d-8e07-36888e27c587",
       "metadata": {
         "id": "e5ec1bf8-6d26-417d-8e07-36888e27c587",
@@ -1431,13 +1431,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "75b792aa-4329-4be7-855f-031538780d2e",
       "metadata": {
         "id": "75b792aa-4329-4be7-855f-031538780d2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 888
+          "height": 868
         },
         "outputId": "638ebe3a-6095-474a-d75e-7b9e1dd17e7c"
       },
@@ -2104,7 +2104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "550fcfbd-0c9a-4895-9fb9-f1e31c926299",
       "metadata": {
         "id": "550fcfbd-0c9a-4895-9fb9-f1e31c926299",
@@ -3040,7 +3040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "a969cf5e-18c2-46ef-a7ba-39db111b4a1a",
       "metadata": {
         "id": "a969cf5e-18c2-46ef-a7ba-39db111b4a1a",
@@ -3629,7 +3629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "361906c9-a3f4-43b0-b2b6-6a27e9e70787",
       "metadata": {
         "id": "361906c9-a3f4-43b0-b2b6-6a27e9e70787",
@@ -3695,81 +3695,92 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 9,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
-        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a"
+        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "52857365-b275-4736-be84-498cdad93ae1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-9-2fea54497a9c>:20: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "  row.append(float(re.search(r'(\\u20AC)(\\d+.\\d+)', i.find('dt', text=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[1]))\n",
+            "<ipython-input-9-2fea54497a9c>:24: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "  row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Pieces\").find_next_sibling().text, re.UNICODE).groups()[0]))\n",
+            "<ipython-input-9-2fea54497a9c>:28: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "  row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Minifigs\").find_next_sibling().text, re.UNICODE).groups()[0]))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saved 250 Lego sets to lego2019.csv\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-9-2fea54497a9c>:37: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "  data = pd.concat([data, collectLegoSets(next_page)], axis=0).reset_index(drop=True)\n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "\n",
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
         "import pandas as pd\n",
+        "import re\n",
         "import numpy as np\n",
         "\n",
-        "def collectLegoSets(year):\n",
-        "    base_url = f\"https://brickset.com/sets/year-2019\"\n",
-        "    sets_data = []\n",
-        "    page = 1\n",
+        "def collectLegoSets(url):\n",
+        "    site = requests.get(url)\n",
+        "    soup = BeautifulSoup(site.text)\n",
         "\n",
-        "    while True:\n",
-        "        url = f\"{base_url}/page-{page}\"\n",
-        "        response = requests.get(url)\n",
-        "        soup = BeautifulSoup(response.content, 'html.parser')\n",
+        "    articles = [i for i in soup.find_all('article')]\n",
+        "    data = []\n",
+        "    for i in articles:\n",
+        "        row = []\n",
         "\n",
-        "        sets = soup.find_all('article', class_='set')\n",
-        "\n",
-        "        if not sets:\n",
-        "            break\n",
-        "\n",
-        "        for set in sets:\n",
-        "            name = set.find('h1').text.strip()\n",
-        "\n",
-        "            price = set.find('dt', string='RRP')\n",
-        "            price_euro = np.nan\n",
-        "            if price:\n",
-        "                price_text = price.find_next('dd').text.strip()\n",
-        "                if '€' in price_text:\n",
-        "\n",
-        "                    price_euro_str = price_text.split('|')[0].split('€')[1].replace(',', '.')\n",
-        "\n",
-        "                    try:\n",
-        "                        price_euro = float(price_euro_str)\n",
-        "                    except ValueError:\n",
-        "                        price_euro = np.nan\n",
-        "\n",
-        "            pieces = set.find('dt', string='Pieces')\n",
-        "            pieces_count = np.nan\n",
-        "            if pieces:\n",
-        "                pieces_text = pieces.find_next('dd').text.strip()\n",
-        "                if pieces_text.isdigit():\n",
-        "                    pieces_count = int(pieces_text)\n",
-        "\n",
-        "            minifigs = set.find('dt', string='Minifigs')\n",
-        "            minifigs_count = np.nan\n",
-        "            if minifigs:\n",
-        "                minifigs_text = minifigs.find_next('dd').text.strip()\n",
-        "                if minifigs_text.isdigit():\n",
-        "                    minifigs_count = int(minifigs_text)\n",
-        "\n",
-        "            sets_data.append({\n",
-        "                'Set': name,\n",
-        "                'Price_Euro': price_euro,\n",
-        "                'Pieces': pieces_count,\n",
-        "                'Minifigs': minifigs_count\n",
-        "            })\n",
-        "\n",
-        "        page += 1\n",
-        "\n",
-        "    return pd.DataFrame(sets_data)\n",
-        "\n",
-        "dataframe_2019 = collectLegoSets(2019)\n",
+        "        row.append(i.h1.text)\n",
+        "        try:\n",
+        "            row.append(float(re.search(r'(\\u20AC)(\\d+.\\d+)', i.find('dt', text=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[1]))\n",
+        "        except:\n",
+        "            row.append(np.nan)\n",
+        "        try:\n",
+        "            row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Pieces\").find_next_sibling().text, re.UNICODE).groups()[0]))\n",
+        "        except:\n",
+        "            row.append(np.nan)\n",
+        "        try:\n",
+        "            row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Minifigs\").find_next_sibling().text, re.UNICODE).groups()[0]))\n",
+        "        except:\n",
+        "            row.append(np.nan)\n",
+        "        data.append(row)\n",
+        "    data = pd.DataFrame(data, columns=['Set', 'Price_Euro', 'Pieces','Minifigs'])\n",
         "\n",
         "\n",
-        "dataframe_2019.to_csv('lego2019.csv', index=False)\n",
-        "\n"
+        "    try:\n",
+        "        next_page = soup.find('li', class_='next').a['href']\n",
+        "        data = pd.concat([data, collectLegoSets(next_page)], axis=0).reset_index(drop=True)\n",
+        "        return data\n",
+        "    except:\n",
+        "        return data\n",
+        "\n",
+        "lego2019 = collectLegoSets('https://brickset.com/sets/year-2019')\n",
+        "\n",
+        "\n",
+        "lego2019.to_csv('lego2019.csv', index=False)\n",
+        "\n",
+        "print(f\"Saved {len(lego2019)} Lego sets to lego2019.csv\")"
       ]
     }
   ],
