--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -3695,41 +3695,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52857365-b275-4736-be84-498cdad93ae1"
+        "outputId": "c52f8533-b187-49e1-ae67-4389d4e89f9c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-9-2fea54497a9c>:20: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "<ipython-input-16-a53abca3c739>:34: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
             "  row.append(float(re.search(r'(\\u20AC)(\\d+.\\d+)', i.find('dt', text=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[1]))\n",
-            "<ipython-input-9-2fea54497a9c>:24: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "<ipython-input-16-a53abca3c739>:40: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
             "  row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Pieces\").find_next_sibling().text, re.UNICODE).groups()[0]))\n",
-            "<ipython-input-9-2fea54497a9c>:28: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
-            "  row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Minifigs\").find_next_sibling().text, re.UNICODE).groups()[0]))\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saved 250 Lego sets to lego2019.csv\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-9-2fea54497a9c>:37: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-            "  data = pd.concat([data, collectLegoSets(next_page)], axis=0).reset_index(drop=True)\n"
+            "<ipython-input-16-a53abca3c739>:46: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "  row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Minifigs\").find_next_sibling().text, re.UNICODE).groups()[0]))\n",
+            "<ipython-input-16-a53abca3c739>:65: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "  return pd.concat([newData, collectLegoSets(nextPage)], axis=0)\n"
           ]
         }
       ],
@@ -3738,49 +3725,73 @@
         "\n",
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "import re\n",
-        "import numpy as np\n",
+        "import time\n",
         "\n",
-        "def collectLegoSets(url):\n",
-        "    site = requests.get(url)\n",
-        "    soup = BeautifulSoup(site.text)\n",
+        "# A function to collect lego sets from search results on brickset.com\n",
+        "def collectLegoSets(startURL):\n",
+        "    # Add headers to imitate a real browser\n",
+        "    headers = {\n",
+        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36',\n",
+        "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8',\n",
+        "        'Referer': 'https://www.google.com/'\n",
+        "    }\n",
         "\n",
-        "    articles = [i for i in soup.find_all('article')]\n",
-        "    data = []\n",
-        "    for i in articles:\n",
+        "    myPage = requests.get(startURL)\n",
+        "\n",
+        "    parsed = BeautifulSoup(myPage.text)\n",
+        "\n",
+        "    a = [i for i in parsed.find_all('article')]\n",
+        "\n",
+        "\n",
+        "    newData = []\n",
+        "\n",
+        "    for i in a:\n",
         "        row = []\n",
         "\n",
         "        row.append(i.h1.text)\n",
         "        try:\n",
+        "\n",
         "            row.append(float(re.search(r'(\\u20AC)(\\d+.\\d+)', i.find('dt', text=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[1]))\n",
         "        except:\n",
+        "\n",
         "            row.append(np.nan)\n",
+        "\n",
         "        try:\n",
         "            row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Pieces\").find_next_sibling().text, re.UNICODE).groups()[0]))\n",
         "        except:\n",
+        "\n",
         "            row.append(np.nan)\n",
+        "\n",
         "        try:\n",
         "            row.append(float(re.search(r'(\\d+)', i.find('dt', text=\"Minifigs\").find_next_sibling().text, re.UNICODE).groups()[0]))\n",
         "        except:\n",
-        "            row.append(np.nan)\n",
-        "        data.append(row)\n",
-        "    data = pd.DataFrame(data, columns=['Set', 'Price_Euro', 'Pieces','Minifigs'])\n",
         "\n",
+        "            row.append(np.nan)\n",
+        "\n",
+        "\n",
+        "        newData.append(row)\n",
+        "\n",
+        "    newData = pd.DataFrame(newData, columns = ['Set', 'Price_Euro', 'Pieces','Minifigs'])\n",
         "\n",
         "    try:\n",
-        "        next_page = soup.find('li', class_='next').a['href']\n",
-        "        data = pd.concat([data, collectLegoSets(next_page)], axis=0).reset_index(drop=True)\n",
-        "        return data\n",
+        "        nextPage = parsed.find('li', class_=\"next\").a['href']\n",
         "    except:\n",
-        "        return data\n",
+        "        nextPage = None\n",
         "\n",
-        "lego2019 = collectLegoSets('https://brickset.com/sets/year-2019')\n",
+        "    if nextPage:\n",
         "\n",
+        "        time.sleep(2)\n",
         "\n",
-        "lego2019.to_csv('lego2019.csv', index=False)\n",
+        "        return pd.concat([newData, collectLegoSets(nextPage)], axis=0)\n",
         "\n",
-        "print(f\"Saved {len(lego2019)} Lego sets to lego2019.csv\")"
+        "    else:\n",
+        "        return newData\n",
+        "\n",
+        "lego2019 = collectLegoSets(\"https://brickset.com/sets/year-2019\")\n",
+        "lego2019.to_csv('lego2019.csv', index=False)\n"
       ]
     }
   ],
